fix illagerspell crash
fix ##423